--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fullstack Open course part 13 - Relational Databases",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migration:down": "node util/rollback.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
